# graph-plot

./: Cargo.toml  README.md
assets/shaders/: edge.wgsl  frag.wgsl  node.wgsl  vertex.wgsl
assets/sprites/: handle-sel.png~  handle_selected30.png~  node_selected30.png~
src/: graph.rs  input.rs  main.rs  materials.rs  smatrix.rs  types.rs  ui.rs
src/graph/: event.rs  plugin.rs
src/graph/event/: add.rs  draw.rs  mesh.rs  phys.rs  remove.rs  span_tree.rs
