[package]
name = "graph-plotter-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = "0.23.0"

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
	"dynamic_linking",
	"bevy_asset",
	"multi-threaded",
	"bevy_winit",
	"bevy_render",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_text",
	"png",
	"wayland"
] 

[profile.dev.package."*"]
opt-level = 3
